--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">WeatherApp</string>
     <string name="loading">Loading</string>
     <string name="retry">Retry</string>
+    <string name="degree">°</string>
 </resources>
